# aistat

./: .gitignore  .goreleaser.yaml  CLAUDE.md  Cargo.toml  README.md  TESTING.md  go.mod  install.sh  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
cmd/aistat/: accounts.go  accounts_multi_test.go  accounts_test.go  coverage_fake_test.go  coverage_test.go  fake_disabled.go  fake_enabled.go  fake_provider.go  main.go  main_fake_test.go  main_test.go  realproviders_test.go  registry.go  switch.go  switch_multi_test.go  switch_test.go  usage.go  usage_test.go
cmd/usage-check/: coverage_fake_test.go  coverage_test.go  fake_disabled.go  fake_enabled.go  fake_provider.go  main.go  main_test.go  registry.go  warn_wiring_test.go
examples/: agent-selection.md  auto-switch.sh  route.sh
internal/accounts/: account.go  account_test.go  memory_store.go  memory_store_test.go  provider.go  provider_test.go  store.go  store_darwin.go  store_darwin_test.go  store_linux.go  store_linux_test.go  store_unsupported.go
internal/cred/: claude.go  claude_test.go  codex.go  codex_test.go  github.go  github_test.go  keychain_darwin.go  keychain_darwin_test.go  keychain_linux.go  keychain_linux_test.go  keychain_unsupported.go  keychain_unsupported_test.go
internal/httpx/: httpx.go  httpx_test.go
internal/orchestrate/: orchestrate.go  orchestrate_test.go  parity_test.go
internal/providers/: classify.go  classify_test.go  types.go  types_test.go
internal/render/: json.go  json_test.go  text.go  text_test.go  (+1 more)
src/: httpx.rs  main.rs  orchestrate.rs
(+91 files in other folders)
